--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     </div>
 
     <!-- Service Area Two End -->
-    <div class="service-area-two second-session second-session-bg text-center">
+    <div class="service-area-two  second-session-bg text-center">
         <div class="container second-session-before">
             <div class="row mb-5">
                 <div class="col-md-12 second-session-content">
@@ -652,83 +652,25 @@ creating products
         </div>
     </div>
 
-    <!-- methodology-section-starts-here -->
-    <div class="methodology pt-5" style="margin-top: 75px;">
-        <div class="container">
-            <div class="row pt-45">
-                <div class="col-lg-6 second-session-content">
-                    <div>
-                        <h3 class="methodology-session-text mb-5">METHODOLOGY</h3>
-                    </div>
-                    <div>
-                        <div class="information">
-                            <p style="color: #ffff;">
-                                Tech Tammina always empowers knowledge resources with immediate access to information
-                                and tracks performance toward business goals. Our managed services offer a centralizeds
-                                place wherein the end user can raise tickets for any application. It offers dynamic
-                                allocation of tickets, a streamlined approval matrix, and auto-search of similar tickets
-                                with supporting KB documents to reduce the closure time.
-                            </p>
-                        </div>
-                        <div class="First-text">
-                            <div>
-                                <h2 class="omni-text">Knowledge Base Documents</h2>
-                            </div>
-                            <p>
-                                A knowledge base improves a company’s ability to grow exponentially. It is a self-serve
-                                portal that exists in multiple formats (.doc, .pdf, .xls, etc) and is easily accessible
-                                to any user looking to get more information about any problem. Our application fetches
-                                the related KB documents automatically from the archive based on the keywords. For every
-                                issue, the support team should create a knowledge base document (Symptoms, Root Cause,
-                                Action, and Category).
-                            </p>
-                        </div>
-                        <div class="second-text">
-                            <h2 class="omni-text">Appian Portal</h2>
-                            <p>
-                                Appian Portal acts as a front door, connecting external users with Appian data and
-                                workflow. It can be used to submit forms, file claims, view documents/information, and
-                                more, without requiring users to log in. Simultaneously, we can use low code to build
-                                public websites that are conveniently connected to the Appian applications. Our
-                                application uses Appian Portal which makes external users raise the ticket without
-                                holding an Appian license.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 left-part" data-aos="fade-right">
-                    <div class="polygon-1"><img src="assets/TAMS%20imgs/Methodology-polygon-1.svg" alt=""></div>
-                    <div class="polygon-2"><img src="assets/TAMS%20imgs/Methodology-polygon-2.svg" alt=""></div>
-                    <div class="polygon-3"><img src="assets/TAMS%20imgs/Methodology-polygon-3.svg" alt=""></div>
-                    <div class="polygon-4"><img src="assets/TAMS%20imgs/Methodology-polygon-4.svg" alt=""></div>
-                    <div class="robo">
-                        <img src="assets/TAMS imgs/Frame.robo.svg" alt="">
-                    </div>
-                    <div>
-                        <img src="assets/TAMS imgs/methodology-3-lined-elips.svg" alt="image">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
 
 
 
-    <div class="container second-session my-5 py-5">
+
+    <div class="container  my-5 py-5">
         <div class="text-center">
             <h3 class="second-session-text mb-5">Appian Low-Code</h3>
         </div>
         <div class="w-75 mx-auto">
-            <p class="text-center">Appian’s low-code capabilities and rapid set-up enables us to deliver high-quality
-                solutions and integrate all the technologies, data, and systems into a single workflow to accelerate
-                business results for your growth in this digital world. Our managed services onboard only skilled
-                resources to work on the assigned tickets, which are allocated to them dynamically with the help of
-                pre-defined rules on the skill sets in Appian. Unlike other ticketing systems, our application
-                proactively monitors the health of the application and does periodic code reviews whenever it is
-                required. Also, it has a provision to integrate with other ticketing systems through Web APIs.
+            <p class="text-center">
+           
+                Appian’s low code will help businesses to set the right execution model by making sure that they are on the right path. This will help you to choose the right use case for the automation journey. Appian and automation always go hand-in-hand and are quite synonymous with cost-cutting too. With Appian, many automation instances can be identified and they can be resolved by using expression rules and process models.<br><br>
+
+Our Automation CoE lies in orchestrating people, technology, and data in a single workflow. To realize this, every organization must track and analyze the needs, inefficiencies, any regulatory changes that demand change, and trends that have to be adapted to. If the scope for automation is already identified and is in place, then we would also extend the boundary to automate work to increase user engagement and partnership in business processes.
+
+                
             </p>
         </div>
     </div>
@@ -737,33 +679,25 @@ creating products
 
 
 
-
+<div class="postion-relative">
     <div class="tammina-session">
-        <div class="text-center tammina-session-reports">
+        <!-- <div class="text-center tammina-session-reports">
             <img class="reports-img" src="assets/TAMS imgs/low-code-change.svg">
-        </div>
+        </div> -->
         <div class="container">
-            <div class="row align-items-end height-100">
-                <div class="col-md-6 tech-robo-align">
-                    <img src="assets/TAMS imgs/why-tech-robo.svg">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="assets/CEO/roboGroup (1).svg">
                 </div>
-                <div class="col-md-6 tammina-block">
-                    <div class="text-center">
-                        <h3 class="second-session-text second-session-text-tammina mb-5 text-white">Why Tech Tammina?
+                <div class="col-md-8 second-session tammina-block">
+                    <div>
+                        <h3 class="second-session-text second-session-text-tammina mb-3 text-white">Why Tech Tammina?
                         </h3>
                     </div>
                     <div class="tammina-text" style="font-size: 18px;">
                         <p class="text-white" style="padding-bottom: 100px;">
-                            Managed services have become an integral part of the business’s technology sphere to
-                            strengthen and fasten problem-resolution mechanisms for optimum operational agility. We
-                            understand the importance of IT excellence in this rapidly evolving digital landscape and
-                            are fully committed to the vision of your problem resolution for faster and more accurate
-                            deployment. Developed by a team of highly skilled professionals with the latest potential of
-                            the Appian low-code portal, TAMS capacitates you with end-to-end ticketing support,
-                            maintenance, and reliability,
-                            making us well-preferred among our customers.<br><br>
-                            <span class="font-weight-bold" style="font-size: 18px; font-weight: 800;">Contact us to
-                                learn more!</span>
+                            Automation CoE can enable rapid transformation while controlling associated risks, helping you to manage your automation investments wisely and enabling you to operate and monitor your initiatives efficiently. As the competitive advantages of automation continue to expand, and the use of automation technologies becomes more common, the need for organizations to accelerate their automation programs and quickly move to scale becomes more urgent. Tech Tammina offers an automation solution that helps the organization reduce average handling time by 55% and reduce process costs by 75%. 
+                            Reach out to us to automate your business!
                         </p>
 
                     </div>
@@ -792,17 +726,19 @@ creating products
     <div class="container">
         <div class="design-card-support container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-md-6">
                     <div>
-                        <h2 class="text-white">Reduce your customer support cost by 67% & Reduce the average response
-                            time by 50%</h2>
+                        <h2 class="text-white">
+                            We are happy to show our
+automation capabilities to you!
+                        </h2>
                     </div>
                 </div>
-                <div class="Connect-content">
+                <div class="col-md-6 Connect-content">
                     <div>
                         <button class="Connect-btn" data-bs-target="#exampleModalToggle" data-bs-toggle="modal"><a
-                                class="text-white" onclick="getform()" href="#register">Click Here</a></button>
-                        <p class="text-center text-white">To learn more</p>
+                                class="text-white" onclick="getform()" href="#register">Connect</a></button>
+                        <!-- <p class="text-center text-white">To learn more</p> -->
                     </div>
                 </div>
 
@@ -916,7 +852,7 @@ creating products
             </div>
         </div>
     </div>
-
+</div>
 
 
 
