--- a/index.html
+++ b/index.html
@@ -676,14 +676,14 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
     </div>
 
 
-
-
+    <div class="text-center tammina-session-reports">
+        <img class="reports-img" src="assets/CEO/low-code copy 2.png">
+    </div>
 
 <div class="postion-relative">
     <div class="tammina-session">
-        <!-- <div class="text-center tammina-session-reports">
-            <img class="reports-img" src="assets/TAMS imgs/low-code-change.svg">
-        </div> -->
+
+  
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
