--- a/index.html
+++ b/index.html
@@ -666,9 +666,60 @@ creating products
         </div>
     </div>
 
+<!-- Methodology -->
 
-
-
+<div class="methodology">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 second-session-content">
+                <div class="d-flex justify-content-center">
+                    <h3 class="methodology-session-text mb-5">METHODOLOGY</h3>
+                </div>
+            </div>
+        </div>
+        <div class="information">
+            <p style="color: #ffff;">
+                Tech Tammina always empowers knowledge resources with immediate access to information
+                and tracks performance toward business goals. Our managed services offer a centralizeds
+                place wherein the end user can raise tickets for any application. It offers dynamic
+                allocation of tickets, a streamlined approval matrix, and auto-search of similar tickets
+                with supporting KB documents to reduce the closure time.
+            </p>
+        </div>
+                <div>
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 col-md-12">
+                            <div class="First-text">
+                                <div>
+                                    <h2 class="omni-text">Knowledge Base Documents</h2>
+                                </div>
+                                <p>
+                                    A knowledge base improves a company’s ability to grow exponentially. It is a self-serve
+                                    portal that exists in multiple formats (.doc, .pdf, .xls, etc) and is easily accessible
+                                    to any user looking to get more information about any problem. Our application fetches
+                                    the related KB documents automatically from the archive based on the keywords. For every
+                                    issue, the support team should create a knowledge base document (Symptoms, Root Cause,
+                                    Action, and Category).
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-12">
+                            <div class="second-text">
+                                <h2 class="omni-text">Appian Portal</h2>
+                                <p>
+                                    Appian Portal acts as a front door, connecting external users with Appian data and
+                                    workflow. It can be used to submit forms, file claims, view documents/information, and
+                                    more, without requiring users to log in. Simultaneously, we can use low code to build
+                                    public websites that are conveniently connected to the Appian applications. Our
+                                    application uses Appian Portal which makes external users raise the ticket without
+                                    holding an Appian license.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    </div>
+</div>
 
 
 
