--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
             <div class="row">
                 <div class="col-md-6 first-section-image my-auto px-0">
                     <!-- <img src="assets/IRP-assets/screen.png" alt="System"> -->
-                    <h2 class="text-white">Center of<br>
-                        Excellence</h2>
+                    <h2 class="text-white">Automation<br>
+                        Center of Excellence</h2>
                     <p class="text-white first-section_content">
                         Effective Optimization
                         & Automation!
@@ -423,8 +423,8 @@
                     </div>
                     <div>
                         <div>
-                            <p class="font-weight-bold" style="font-weight: 500;">
-                                Given the array of ongoing challenges businesses face, including those posed by hybrid work and COVID-19, business automation is more important than ever. In large organizations, many business units have long been using robotic process automation (RPA) to automate simple manual tasks such as copying and pasting data. While RPA can address local needs quickly and easily, it can’t scale to deliver the complete end-to-end automation, also called hyper-automation, that modern companies need. When business units become frustrated with the limitations of RPA, they may choose to work around IT to implement their own tech solutions. This can lead to problems, such as noncompliant or insecure implementations, technical debt, siloed data, maintenance challenges, and misalignment with strategic go. 
+                            <p class="font-weight-bold" style="font-weight: 500; font-size: 15px;">
+                                Given the array of ongoing challenges businesses face, including those posed by hybrid work and COVID-19, business automation is more important than ever. In large organizations, many business units have long been using robotic process automation (RPA) to automate simple manual tasks such as copying and pasting data. While RPA can address local needs quickly and easily, it can’t scale to deliver the complete end-to-end automation, also called hyper-automation, that modern companies need. When business units become frustrated with the limitations of RPA, they may choose to work around IT to implement their own tech solutions. This can lead to problems, such as noncompliant or insecure implementations, technical debt, siloed data, maintenance challenges, and misalignment with strategic go. <br>There is a considerable range of approaches—both in terms of methodology and technology—that can enable complete automation. Even with the best tools in place, however, nearly every company can benefit from a business unit devoted to overseeing, championing, and supporting the goal of automation. This is where the automation center of excellence (CoE) comes in.</br> </p>
 
                             </p>
                         </div>
@@ -682,40 +682,24 @@ creating products
         </div>
         <div class="information">
             <p style="color: #ffff;">
-                Tech Tammina always empowers knowledge resources with immediate access to information
-                and tracks performance toward business goals. Our managed services offer a centralizeds
-                place wherein the end user can raise tickets for any application. It offers dynamic
-                allocation of tickets, a streamlined approval matrix, and auto-search of similar tickets
-                with supporting KB documents to reduce the closure time.
+                Tech Tammina plays a key part in automation, streamlining development and scaling automation across the entire enterprise. We help teams build powerful apps quickly and make a full ecosystem of technologies available to developers. Our automation CoE provides simple data convergence across the organization without the need to migrate data, offering a virtual 360-degree view of data. This allows data to be accessed where needed, alongside dynamic task management tools that make it easier for users to handle exceptions or ad hoc activities keeping humans at the center of automated processes.
             </p>
         </div>
                 <div>
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-md-12">
                             <div class="First-text">
-                                <div>
-                                    <h2 class="omni-text">Knowledge Base Documents</h2>
-                                </div>
+                                    <h2 class="omni-text">Appian RPA</h2>
                                 <p>
-                                    A knowledge base improves a company’s ability to grow exponentially. It is a self-serve
-                                    portal that exists in multiple formats (.doc, .pdf, .xls, etc) and is easily accessible
-                                    to any user looking to get more information about any problem. Our application fetches
-                                    the related KB documents automatically from the archive based on the keywords. For every
-                                    issue, the support team should create a knowledge base document (Symptoms, Root Cause,
-                                    Action, and Category).
+                                    Full-featured low-code platforms provide built-in RPA functionality, so bots can be deployed easily and effectively while working with more complex tasks and extensive automation technology. Ultimately, the flexibility, speed, and tools provided by a complete low-code platform will serve as a key addition to the arsenal of any automation center of excellence.
                                 </p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <div class="second-text">
-                                <h2 class="omni-text">Appian Portal</h2>
+                                <h2 class="omni-text">Appian Best Practices</h2>
                                 <p>
-                                    Appian Portal acts as a front door, connecting external users with Appian data and
-                                    workflow. It can be used to submit forms, file claims, view documents/information, and
-                                    more, without requiring users to log in. Simultaneously, we can use low code to build
-                                    public websites that are conveniently connected to the Appian applications. Our
-                                    application uses Appian Portal which makes external users raise the ticket without
-                                    holding an Appian license.
+                                    Enterprise automation initiatives require governance. Our automation COE uses one of three primary models (centralized, decentralized, and federated) to balance business goals against IT standards and requirements. The COE empowers evangelism by utilizing proper buy-in from relevant parties. Additionally, it keeps an agile mindset that encompasses a range of processes aimed at overcoming the slow pace and uneven quality of traditional development. Furthermore, it implements complete automation that enables the efficient and effective design of complex, end-to-end processes with the help of specialized resources.
                                 </p>
                             </div>
                         </div>
@@ -727,12 +711,12 @@ creating products
 
 
 
-    <div class="container  my-5 py-5" style="position: relative; top: 17rem;">
+    <div class="container  my-5 py-5" style="position: relative; top: 30rem;">
         <div class="text-center">
             <h3 class="second-session-text mb-5">Appian Low-Code</h3>
         </div>
         <div class="w-75 mx-auto">
-            <p class="text-center">
+            <p class="text-center" style="font-size: 15px;">
            
                 Appian’s low code will help businesses to set the right execution model by making sure that they are on the right path. This will help you to choose the right use case for the automation journey. Appian and automation always go hand-in-hand and are quite synonymous with cost-cutting too. With Appian, many automation instances can be identified and they can be resolved by using expression rules and process models.<br><br>
 
@@ -765,7 +749,7 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
                             Automation CoE can enable rapid transformation while controlling associated risks, helping you to manage your automation investments wisely and enabling you to operate and monitor your initiatives efficiently. As the competitive advantages of automation continue to expand, and the use of automation technologies becomes more common, the need for organizations to accelerate their automation programs and quickly move to scale becomes more urgent. Tech Tammina offers an automation solution that helps the organization reduce average handling time by 55% and reduce process costs by 75%. 
                             Reach out to us to automate your business!
                         </p>
-
+                        <b class="text-white">Reach out to us to automate your business!</b>
                     </div>
                 </div>
             </div>
@@ -775,7 +759,7 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
         <div class="row">
             <div class="col-md-12 p-2">
                 <div>
-                    <h2 class="text-white">
+                    <h2 class="text-white text-center">
                         We are happy to show our
                         automation capabilities to you!
                     </h2>
@@ -810,7 +794,8 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
                                         </div>
                                         <div
                                             class="col-md-7  text-left d-flex align-items-center items-seleted-text">
-                                            <h4>Immediate response</h4>
+                                            <h4>AI services out-of-the-box
+                                            </h4>
                                         </div>
                                     </div>
                                     <div class="row mb-5">
@@ -819,7 +804,8 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
                                         </div>
                                         <div
                                             class="col-md-7  text-left d-flex align-items-center items-seleted-text">
-                                            <h4>Reduce repeated issues</h4>
+                                            <h4>Custom machine learning models
+                                            </h4>
                                         </div>
                                     </div>
                                     <div class="row mb-5">
@@ -828,28 +814,14 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
                                         </div>
                                         <div
                                             class="col-md-7  text-left d-flex align-items-center items-seleted-text">
-                                            <h4>Fast closure of tickets</h4>
+                                            <h4>Accelerate delivery of IT applications</h4>
                                         </div>
-                                    </div>
-                                    <div class="row mb-5">
-                                        <div class="col-md-5 text-right px-0">
-                                            <img src="assets/TAMS imgs/Clipath group.svg">
-                                        </div>
-                                        <div
-                                            class="col-md-7  text-left d-flex align-items-center items-seleted-text">
-                                            <h4>Flexible to modify changes</h4>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <p class="card-form-text">Automate your support team with our managed
-                                            services!</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 form-card mt-5">
                                     <div>
                                         <div class="REGISTER-text">
-                                            <h4>REGISTER & GET READY TO
-                                                FEEL THE CHANGE!</h4>
+                                            <h4>EMBRACE DIGITAL AUTOMATION AND INNOVATION!</h4>
                                         </div>
                                         <script charset="utf-8" type="text/javascript"
                                             src="//js.hsforms.net/forms/embed/v2.js"></script>
