--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
     <div class="tammina-session">
         <div class="container">
             <div class="row">
-                <div class="col-md-4" style="position: relative; top: 78px;">
+                <div class="col-md-4 robo">
                     <img src="assets/CEO/roboGroup (1).svg">
                 </div>
                 <div class="col-md-8 second-session tammina-block">
