--- a/index.html
+++ b/index.html
@@ -399,7 +399,6 @@
                 <div class="col-md-6">
                     <div class="d-flex justify-content-start horse-img">
    <img src="assets/img/home-mockup copy 1.svg">
-   <img class="horse" src="assets/img/Group (1).svg" alt=""> 
 
                     </div>
 
@@ -424,7 +423,7 @@
                     <div>
                         <div>
                             <p class="font-weight-bold" style="font-weight: 500; font-size: 15px;">
-                                Given the array of ongoing challenges businesses face, including those posed by hybrid work and COVID-19, business automation is more important than ever. In large organizations, many business units have long been using robotic process automation (RPA) to automate simple manual tasks such as copying and pasting data. While RPA can address local needs quickly and easily, it can’t scale to deliver the complete end-to-end automation, also called hyper-automation, that modern companies need. When business units become frustrated with the limitations of RPA, they may choose to work around IT to implement their own tech solutions. This can lead to problems, such as noncompliant or insecure implementations, technical debt, siloed data, maintenance challenges, and misalignment with strategic go. <br>There is a considerable range of approaches—both in terms of methodology and technology—that can enable complete automation. Even with the best tools in place, however, nearly every company can benefit from a business unit devoted to overseeing, championing, and supporting the goal of automation. This is where the automation center of excellence (CoE) comes in.</br> </p>
+                                Given the array of ongoing challenges businesses face, including those posed by hybrid work and COVID-19, business automation is more important than ever. In large organizations, many business units have long been using robotic process automation (RPA) to automate simple manual tasks such as copying and pasting data. While RPA can address local needs quickly and easily, it can’t scale to deliver the complete end-to-end automation, also called hyper-automation, that modern companies need. When business units become frustrated with the limitations of RPA, they may choose to work around IT to implement their own tech solutions. This can lead to problems, such as noncompliant or insecure implementations, technical debt, siloed data, maintenance challenges, and misalignment with strategic go. <p class="font-weight-bold" style="font-weight: 500; font-size: 15px;">There is a considerable range of approaches—both in terms of methodology and technology—that can enable complete automation. Even with the best tools in place, however, nearly every company can benefit from a business unit devoted to overseeing, championing, and supporting the goal of automation. This is where the automation center of excellence (CoE) comes in.</p> </p>
 
                             </p>
                         </div>
@@ -432,7 +431,7 @@
                 </div>
             </div>
             <div class="card-flex mx-0">
-                <div class="col-md-6 card card-align">
+                <div class="col-md-12 col-lg-6 card card-align">
                     <div class="mx-auto py-2" style="font-size:18px">
                         <div class="d-flex align-items-center d-gap">
                             <div class="w-25 card-content">
@@ -448,7 +447,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 card card-align card-align-left ml-auto">
+                <div class="col-md-12 col-lg-6 card card-align card-align-left ml-auto">
                     <div class="mx-auto py-2" style="font-size:18px">
                         <div class="d-flex align-items-center d-gap">
                             <div class="w-25 card-content">
@@ -489,6 +488,7 @@
                 </div>
             </div> -->
             <div class="col-md-12">
+                <p class="Heading">Let’s see how Tech Tammina streamlines your processes!</p>
                 <div class="second-session">
                     <h1 class="second-session-text">Service Lines</h1>
                 </div>
@@ -662,8 +662,7 @@ creating products
             <h2 class="global-value"><span class="global-value-one">299.98 million in 2021</span><span
                     class="global-value-two"> and is projected to hit</span></h2>
                    
-            <h2 class="global-increase"><span class="global-value-two">USD 3,180.8 million by 2030,</span> and
-                by <span style="font-weight: light;"> from an</span></h2>
+            <h2 class="global-increase"><span class="global-value-two">USD 3,180.8 million by 2030,</span>
             <h2 class="global-increase">growing at a CAGR of<span class="global-value-two"> 30.3%.</span>
             </h2>
         </div>
@@ -821,7 +820,7 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
                                 <div class="col-md-6 form-card mt-5">
                                     <div>
                                         <div class="REGISTER-text">
-                                            <h4>EMBRACE DIGITAL AUTOMATION AND INNOVATION!</h4>
+                                            <h4>EMBRACE DIGITAL AUTOMATION & INNOVATION!</h4>
                                         </div>
                                         <script charset="utf-8" type="text/javascript"
                                             src="//js.hsforms.net/forms/embed/v2.js"></script>
